fix: CollapseFrame issues

--- a/src/pages/Home/V2/InternalControlHomePage/HomeTableModal/homeTableModalStyles.scss
+++ b/src/pages/Home/V2/InternalControlHomePage/HomeTableModal/homeTableModalStyles.scss
@@ -252,5 +252,5 @@
 }
 
 .active-btn {
-  background-color: #e6ff00 !important
+  background-color: #ffe595 !important;
 }
